<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingStart="10sp"
    android:paddingEnd="10sp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="134dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_month"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="94dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14sp"
                    android:text="@string/cold_water" />

                <TextView
                    android:id="@+id/tv_cw_o"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_water" />

                <TextView
                    android:id="@+id/tv_hw_o"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter" />

                <TextView
                    android:id="@+id/tv_f_o"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="94dp">

                <TextView
                    android:id="@+id/textView6_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="14sp"
                    android:text="@string/cold_water" />

                <TextView
                    android:id="@+id/tv_cw_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_cw_calc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_water" />

                <TextView
                    android:id="@+id/tv_hw_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_hw_calc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter" />

                <TextView
                    android:id="@+id/tv_f_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/rash"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_calc_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnCalc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:text="@string/calc" />
        </TableRow>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>